--- a/inciop.html
+++ b/inciop.html
@@ -22,7 +22,7 @@
     <tr>
       <td><button></button></td>
       <td><button></button></td>
-      <td><button><a href="primeros.html">LENTES PEC</a></button></td>
+      <td><button><a href="lentespec.html">LENTES PEC</a></button></td>
     </tr>
     <td colspan="3" style="height: 30px;"></td>
     <tr>
