--- a/iniciopt.html
+++ b/iniciopt.html
@@ -153,7 +153,7 @@
     <div class="dropdown">
       <button class="dropbtn">QUINTOS</button>
       <div class="dropdown-content">
-        <a href="lentespec.html">LENTES PEC</a>
+        <a href="PAEC.html">LENTES PEC</a>
         <a href="#">ASILO</a>
         <a href="#">TAPADERAS</a>
         <a href="#">ZOOLÓGICO</a>
